[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Nodes/BiomeNodeMesh.gd" type="Script" id=1]

[node name="BiomeNodeMesh" type="GraphNode"]
margin_right = 337.0
margin_bottom = 186.0
rect_clip_content = true
title = "Mesh"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 321.0
margin_bottom = 180.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 305.0
margin_bottom = 24.0

[node name="PathLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 238.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SelectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 242.0
margin_right = 305.0
margin_bottom = 24.0
text = "Select..."

[node name="MeshPreview" type="TextureRect" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 305.0
margin_bottom = 156.0
rect_min_size = Vector2( 128, 128 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SelectButton" to="." method="_on_SelectButton_pressed"]
